--- a/config.ini
+++ b/config.ini
@@ -3,28 +3,7 @@
 
 [Db_Configuration]
 
-;prefix_table_joomla = lkaq8_
-;user_table = users
-;group_table = lkaq8_user_usergroup_map
-group_admin = admins
-group_poweruser = powerusers
-group_user = users
-
-prv_id_minimo = 10000
-prv_sovraprezzo = 20
-
 titolo_applicazione = "risPArmio by Maurizio Proietti"
-;folder_dest_video = "/var/www/html/stream-project/videos"
-;link_folder_video = "http://85.234.146.73/stream-project/videos"
-;ffmpeg_command = "/usr/bin/ffmpeg"
-
-;AstrazioneDB = PEARMDB2
-;DSN = mysql://user_db:pass_db_pass@localhost/dbname
-;TypeDB = mysql
-;UserDB = siosp
-;PassDB = Va25BLCd.
-;HostDB = localhost
-;NameDB = SIOSP
 
 spesa_unatantum = unatantum
 spesa_periodica = periodica
@@ -34,8 +13,7 @@ spesa_mensile = mensile
 spesa_sostenuta = reale
 spesa_preventivata = preventivo
 
-UserDB = root
-PassDB =
-HostDB = localhost
-NameDB = risPArmio
-
+; UserDB = root
+; PassDB =
+; HostDB = localhost
+; NameDB = risPArmio
