--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@
 
 [Db_Configuration]
 
-titolo_applicazione = "risPArmio by Maurizio Proietti"
+titolo_applicazione = "risPArmio - Provincia di Prato"
 
 spesa_unatantum = unatantum
 spesa_periodica = periodica
